Fixed overflow issue, incremented version

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -272,7 +272,7 @@ div.article-image.right {
 }
 
 .card-content {
-  overflow: auto;
+  overflow: hidden;
 }
 
 .article-card .card-content p {
